[package]
name = "cargo-rio"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive", "wrap_help"] }
color-eyre = "0.6.2"
ssh2 = "0.9.3"
thiserror = "1.0.32"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[features]

[package.metadata.nix]
build = true
